--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
+    "next": "^15.3.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-best-gradient-color-picker": "^3.0.14",
@@ -56,8 +56,8 @@
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "install": "^0.13.0",
