--- a/package.json
+++ b/package.json
@@ -33,20 +33,26 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.4",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
+    "react-aria-components": "^1.8.0",
     "react-best-gradient-color-picker": "^3.0.14",
     "react-day-picker": "^8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.12",
     "sonner": "^2.0.1",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "zsa": "^0.6.0",
@@ -58,12 +64,12 @@
     "@types/node": "^20",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.1.2",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
